@@ -14,3 +14,5 @@
   - added unit tests
   - refactored source
   - now returns `null` instead of `undefined` when passed an empty array
+- dropped `getArtboardSettings()`, `parseObjectName()` does the same thing
+- dropped `getDocumentSlug()`
